# argus

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.fleet  LICENSE  README.md  RELEASING.md  SECURITY.md  THREAT_MODEL.md  docker-compose.yml  hatch_build.py  llms.txt  pyproject.toml  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release-please.yml
benchmarks/: README.md  __init__.py  load.py  run.py
examples/: README.md  analytics_bot.py  basic_bot.py  clustered_bot.py  config_kwargs.py  fleet_member_bot.py  otlp_bot.py  production_bot.py
examples/hosting/: README.md  pterodactyl-egg.json  railway.json  start_shim.py
examples/k8s/: bot.yaml  fleet.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/nimble/: styles.css
frontend/public/nimble/tokens/: backgrounds.css  base.css  colors.css  elevation.css  fonts.css  glass.css  motion.css  presets.css  responsive.css  spacing.css  typefaces.css  typography.css
frontend/src/: App.tsx  app.css  components.test.tsx  components.tsx  sections.tsx  sections_hub.test.tsx  sections_hub.tsx  test-setup.ts  useDashboard.ts
frontend/src/fleet/: Analytics.test.tsx  Analytics.tsx  FleetApp.test.tsx  FleetApp.tsx  Sparkline.test.tsx  Sparkline.tsx  Views.test.tsx  Views.tsx  format.test.ts  format.ts  history.test.ts  history.ts  types.ts  useFleet.ts
frontend/src/lib/: prom.test.ts  prom.ts  quantile.test.ts  quantile.ts  select.ts  snapshot.ts
frontend/src/setup/: SetupWizard.test.tsx  SetupWizard.tsx  generate.test.ts  generate.ts  setup.css
grafana/dashboards/: gateway.json  health.json  interactions.json  overview.json
grafana/provisioning/dashboards/: argus.yml
grafana/provisioning/datasources/: prometheus.yml
prometheus/: prometheus.yml
prometheus/rules/: argus.rules.test.yml  argus.rules.yml
src/argus/: __init__.py  _logging.py  cog.py  config.py  ergonomics.py
src/argus/adapters/: __init__.py  base.py  otlp.py  prometheus.py
src/argus/core/: __init__.py  collector.py  health.py  hooks.py  instrumentation.py  loop_monitor.py  metrics.py
src/argus/dashboard/: __init__.py  auth.py  server.py  snapshot.py
src/argus/dashboard/static/: index.html
src/argus/exposition/: __init__.py  hardening.py  pushgateway.py  server.py
src/argus/fleet/: __init__.py  __main__.py  client.py  config.py  crypto.py  doctor.py  lock.py  metrics.py  model.py  promql.py  ratelimit.py  registry.py  server.py  trend.py  watch.py  wizard.py
src/argus/fleet/sources/: __init__.py  base.py  composite.py  prometheus.py  push.py
src/argus/history/: __init__.py  clickhouse.py  query.py  sink.py
src/argus/tracing/: __init__.py  tracer.py
tests/: conftest.py  test_assets.py  test_cog.py  test_collector.py  test_config.py  test_degradation.py  test_ergonomics.py  test_hardening.py  test_hooks.py  test_invariants.py  test_logging.py  test_metrics.py  test_observability.py  test_otlp.py  test_overhead.py  test_prometheus.py  test_pushgateway.py  test_server.py  test_tracing.py
tests/dashboard/: test_analytics_api.py  test_auth.py  test_server.py  test_snapshot.py  test_snapshot_property.py  test_stream.py
tests/fleet/: test_analytics_api.py  test_client.py  test_config.py  test_crypto.py  test_doctor.py  test_e2e_process.py  test_fuzz_property.py  test_lock.py  test_main.py  test_model.py  test_prometheus_source.py  test_promql.py  test_ratelimit.py  test_registry.py  test_security.py  test_server.py  test_sources.py  test_trend.py  test_watch.py  test_wizard.py
tests/history/: test_clickhouse.py  test_sink.py  test_wiring.py
tests/integration/: test_clickhouse_integration.py
