[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-dpy"
dynamic = ["version"]
description = "Operational Prometheus/OpenTelemetry metrics for discord.py bots, in one line."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
keywords = ["discord", "discord.py", "prometheus", "metrics", "observability", "opentelemetry"]
dependencies = [
    "discord.py>=2.4,<3",
    "prometheus-client>=0.20",
    "aiohttp>=3.11,<4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[project.optional-dependencies]
otlp = ["opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc"]
clickhouse = ["clickhouse-connect[async]"]
# Quality-of-life for the Fleet control plane: autoload a .env so
# `python -m argus.fleet` just works after `argus-fleet init`. Optional; when
# absent, the generated compose env_file / systemd EnvironmentFile load it.
fleet = ["python-dotenv>=1.0"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
    "pytest-cov",
    "python-dotenv>=1.0",
    "hypothesis",
]

[tool.hatch.version]
path = "src/argus/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]
# Ship the built dashboard, but never font originals (.ttf): the dashboard
# bundles only subset .woff2, and this guard stops a frontend build from
# re-bloating the wheel with the full Nimble asset tree.
artifacts = ["src/argus/dashboard/static/**"]
exclude = ["**/*.ttf", "**/*.otf", "**/*.map"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
artifacts = ["src/argus/dashboard/static/**"]
exclude = ["**/*.ttf", "**/*.otf", "**/*.map"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: tests that need an external service (e.g. ClickHouse); skipped unless configured",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src", "tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "ASYNC",  # flake8-async
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "TID",    # flake8-tidy-imports
    "PTH",    # flake8-use-pathlib
    "LOG",    # flake8-logging
    "PERF",   # perflint
    "RUF",    # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# Tests favour explicit `list(...)[0]` and nested `with` for readability.
"tests/**" = ["RUF015", "SIM117"]

[tool.coverage.run]
source = ["src/argus"]
branch = true
